jEdit 5.6 version history
       (changes since jEdit 5.5.0)
:encoding=UTF-8:

{{{ Version 5.6pre1

Thanks to Björn "Vampire" Kautler and Dale Anson for contributing to this release.

{{{ Bug Fixes


}}}
{{{ Miscellaneous
- Fixed all deprecation warnings produced when compiling with Java 9 (Dale
 Anson)

}}}
{{{ API Changes


}}}
{{{ Editing


}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: