@@ -58,6 +58,17 @@ public class IntegerArray
 		return array[index];
 	} //}}}
 
+	//{{{ isEmpty() method
+	/**
+	 * Returns {@code true} if this collection contains no elements.
+	 *
+	 * @return {@code true} if this collection contains no elements
+	 * @since jEdit 5.6pre1
+	 */
+	public boolean isEmpty() {
+		return len == 0;
+	} //}}}
+
 	//{{{ getSize() method
 	public final int getSize()
 	{
